func(ai doc sdk): AI PARAMS